# Contour

./: COPYRIGHT  Contour  LICENSE  LICENSE.txt  README.rst  SECURITY.md  SECURITY_FINDINGS.md  install  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release-sign.yml
scripts/: download_llama_model.py
thonny/: __init__.py  assistance.py  backend.py  common.py  editors.py  first_run.py  main.py  misc_utils.py  shell.py  terminal.py  ui_utils.py  workbench.py
thonny/plugins/: about.py  chat.py  files.py  general_config_page.py  git_support.py  llama_download.py  marimo_view.py  object_inspector.py  pip_gui.py  pydantic_ai_assistant.py  replayer.py  run_debug_config_page.py
thonny/plugins/calliope/: __init__.py
thonny/plugins/cpython_backend/: cp_back.py  cp_launcher.py
thonny/plugins/microbit/: __init__.py
thonny/plugins/micropython/: base_flashing_dialog.py  os_mp_backend.py
thonny/plugins/pi/: __init__.py
thonny/plugins/rp2040/: __init__.py
thonny/plugins/rpi_pico/: __init__.py
