[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = "thonny"
version = "0.1.0"
description = "Python IDE for beginners"
readme = "README.rst"
license = "GPL-3.0-or-later"
requires-python = ">=3.14"
authors = [
    { name = "Aivar Annamaa and others", email = "thonny@googlegroups.com" },
]
keywords = [
    "IDE",
    "debugger",
    "education",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Education",
    "Topic :: Software Development",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Text Editors",
]
dependencies = [
    "asttokens>=2.2.1",
    "docutils>=0.19",
    "minny",
    "mypy>=1.0.1",
    "packaging>=23.0",
    "pylint>=2.16.2",
    "Send2Trash>=1.8.0",
    "wheel>=0.38.4",
    "esptool",
    "urllib3>=2.6.3",
]

[project.optional-dependencies]
ssh = [
  "paramiko>=3.4.0"
]
pty = [
  "ptyprocess>=0.7.0"
]
pydantic-ai = [
  "pydantic-ai>=1.56.0",
  "openai>=1.0.0",
  "certifi>=2024.0.0",
]
llama-cpp = [
  "llama-cpp-python>=0.2.0",
  "certifi>=2024.0.0",
]
marimo = [
  "marimo>=0.20.0",
]
git = [
  "pygit2>=1.14.0",
]
# Fallback when pygit2 cannot be installed (e.g. no libgit2): pip install dulwich
git-dulwich = [
  "dulwich>=0.22.0",
]
# libcurl for model search and scraping; httpx for browser-like page fetches
curl = [
  "pycurl>=7.45.0",
]
fetch-httpx = [
  "httpx[http2]>=0.28.0",
]

[project.urls]
"Bug tracker" = "https://github.com/thonny/thonny/issues"
Homepage = "https://thonny.org"
"Source code" = "https://github.com/thonny/thonny"

[project.scripts]
Contour = "thonny.main:run"

[project.gui-scripts]
thonny = "thonny.main:run"


[dependency-groups]
dev = [
    "bandit[toml]>=1.7.0",
    "black>=24.8.0",
    "isort>=5.13.2",
    "pip-audit>=2.0.0",
    "pyrefly",
    "sigstore>=2.0.0",
    "requests>=2.32.2",
    "paramiko>=3.4.0",
    "ptyprocess",
    "ruff",
]

[tool.uv.build-backend]
module-name = "thonny"
module-root = ""
source-exclude = ["registered.json", ".mypy_cache"]
source-include = ["/defaults.ini"]

[tool.uv.sources]
# minny is on PyPI (https://pypi.org/project/minny/). Omit the override above to use it from PyPI.
# For Thonny dev with a local minny repo next to thonny, use: minny = { path = "../minny", editable = true }

[tool.black]
line-length = 100
target_version = ['py38', 'py39', 'py310']
exclude = ".*api_stubs|typeshed|vendored_libs"

[tool.isort]
profile = "black"
src_paths = ["thonny"]
line_length = 100
skip = ["typeshed", "api_stubs", "esp32_api_stubs", "esp_common_api_stubs", "base_api_stubs", "generic_api_stubs", "vendored_libs"]

[tool.pyrefly]
project-includes = [
    "thonny/__init__.py",
    "thonny/common.py",
    "thonny/backend.py",
    "thonny/plugins/micropython/__init__.py",
    "thonny/plugins/micropython/mp_back.py",
    "thonny/plugins/micropython/bare_metal_backend.py",
    "thonny/plugins/micropython/os_mp_backend.py",
]
search-path = [""]

[tool.ruff]
include = [
    "thonny/__init__.py",
    "thonny/common.py",
    "thonny/backend.py",
    "thonny/plugins/micropython/__init__.py",
    "thonny/plugins/micropython/mp_back.py",
    "thonny/plugins/micropython/bare_metal_backend.py",
    "thonny/plugins/micropython/os_mp_backend.py",
]

[tool.ruff.lint]
ignore = [
    "E402"
]

[tool.bandit]
exclude_dirs = ["thonny/vendored_libs", "thonny/test"]
skips = ["B101"]  # assert_used — acceptable in tests and invariants
# Optional: run with --configfile pyproject.toml; skip B104 (hardcoded_bind_all_interfaces) if only local